--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@cardinal/mpl-candy-machine-utils": "^4.3.2",
+    "@cardinal/mpl-candy-machine-utils": "^4.3.2-beta.12",
     "@cardinal/token-manager": "^1.4.9",
     "@metaplex-foundation/mpl-token-metadata": "1.2.5",
     "@project-serum/anchor": "^0.25.0",
-    "@solana/web3.js": "^1.50.1"
+    "@solana/web3.js": "^1.50.1",
+    "dotenv": "^16.0.3"
   }
 }
