--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@cardinal/mpl-candy-machine-utils": "^4.3.2-beta.12",
+    "@cardinal/mpl-candy-machine-utils": "^4.4.1",
     "@cardinal/token-manager": "^1.4.9",
     "@metaplex-foundation/mpl-token-metadata": "1.2.5",
     "@project-serum/anchor": "^0.25.0",
